--- a/doc/header.tex
+++ b/doc/header.tex
@@ -24,6 +24,7 @@
 \usepackage{hyperref}
 \usepackage{cleveref}
 \usepackage{xcolor}
+\usepackage{graphicx}
 \input{doc/listings.tex}
 \usepackage[binary-units=true]{siunitx}
 \usepackage{multirow}
@@ -70,11 +71,11 @@ Para contabilizar las horas trabajadas en esta entrega hemos utilizado la herram
     \hline
     Implementación básica servidor {\HTTP} & \SI{17}{\hour} \SI{24}{\minute} \\
     \hline
-    Documentación & \phantom{9}\SI{5}{\hour} \SI{45}{\minute} \\
+    Documentación & \phantom{9}\SI{7}{\hour} \SI{39}{\minute} \\
     \hline
     Revisión & \phantom{\SI{99}{\hour}} \SI{35}{\minute} \\
     \hline
-    \textbf{TOTAL} & \SI{23}{\hour} \SI{44}{\minute} \\ \hline
+    \textbf{TOTAL} & \SI{25}{\hour} \SI{38}{\minute} \\ \hline
     % \textbf{MEDIAS} & 2.26\% & 5.45\% & 88.85\% & 3.43\% & 100\% \\ \hline
 \end{tabular}
 \end{center}
