--- a/doc/http-server.tex
+++ b/doc/http-server.tex
@@ -120,8 +120,8 @@ Esta sección está dedicada a partes del código que no forman parte de la lóg
 \item El fichero \file{defs.hpp} contiene definiciones generales para el servidor. Por ejemplo, permite a un usuario cambiar los tiempos de timeout o las asociaciones \key{MIME} que identifican el tipo de fichero según su extensión.
 \end{itemize}
 
-\subsection{Mejoras}
-Esta sección está pendiente. En la entrega de final incluirá las mejoras que se hayan implementado.
+% \subsection{Mejoras}
+% Esta sección está pendiente. En la entrega de final incluirá las mejoras que se hayan implementado.
 %TODO
 
 
